# ChangeLog for app-emacs/bm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/bm/ChangeLog,v 1.4 2008/06/14 23:21:35 ulm Exp $

  14 Jun 2008; Ulrich Mueller <ulm@gentoo.org> bm-1.32.ebuild:
  Do not assign SIMPLE_ELISP since elisp.eclass now detects this case
  automatically.

  22 Mar 2008; Christian Faulhammer <opfer@gentoo.org> bm-1.32.ebuild:
  stable x86/amd64, bug 214225

  02 Jan 2008; Ulrich Mueller <ulm@gentoo.org> bm-1.32.ebuild:
  Add ~amd64 keyword.

*bm-1.32 (13 Oct 2007)

  13 Oct 2007; Ulrich Mueller <ulm@gentoo.org> +files/50bm-gentoo.el,
  +metadata.xml, +bm-1.32.ebuild:
  Initial import. Ebuild contributed by MATSUYAMA Tomohiro
  <matsuyama@ariel-networks.com>, bug #194210.
