@@ -1,25 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX 50bm-gentoo.el 238 SHA256 d9cb323fc3584970f196e58b4c2ae61caa966c138a3942255425c5626f6a7cb8 SHA512 7de32476682355beed9e4f01ee2b264bf43b3b51ac83b26e40069f9d5220bbf78b933504a3a7218dcff0594745890f5c66be65d82ca69c7e07c8f43fc3491f92 WHIRLPOOL 86c52478a6990464f811a0d8900bfa45630523adc5cb8c548ccf85bc58de894ad5a6a849e8a56e2a843c826896a95bd1d10990442a8fd950a98c022e853b5b88
+AUX 50bm-gentoo.el 205 SHA256 15eb16fd0728e63b29c0e94fee74f101110aa21d0b648bf3ffede183d7da0549 SHA512 b5c80ab592a9b78a3441494f6211801d3e001f77985ea2e78b982541f534780b12ff26fb6dd7cf7cb371cb8d3fa2fdf01b55227e40980b94a7e07a45dd583a8a WHIRLPOOL 5065817f57df9530b16357bd19ce0791aad9a8b96e150e29bd1729c20f47b08176c13ac66212eacc74b602d65fc57e326e4491f4d7bde3a67e9caf3118ddbed9
 DIST bm-1.32.el.bz2 7784 SHA256 b7a5f06a680e7c4bfa43a3be5c26adfd4635bec64a32c9e78dd5fee701d09ef4 SHA512 febe77f07a1f67e1699cf4e9818601e86ecf7541de4ca335209609f30b0ed269280a19502a4672317fd9bc8e8be7faae77cf11e7b0d741ae9e6d9de8a7ca0a12 WHIRLPOOL bf97d87813b975891eca6e3f761f700ca72d5138303c314e280cf342472a5bea35b426946058a70fabce7dedcf7311fcc5fd198f1127604a1c49f64c63a326cf
+DIST bm-1.32_p20140214.tar.xz 11800 SHA256 abd338d61ae10dff9c0635cac0f5fa3724605ec8bd2715738a7df000e2ed2ab9 SHA512 0a40c5dc3d21c0b8af7e885f7e2f48c92413dff48a6a3a10366f9a63274886cd22a247b61ef25e4ad1f283446b05093658f233c6501c6d0bf5312d9a67b83ff4 WHIRLPOOL 0937952bf331b24aae55fdf476522a7a9f6de84ebc541fde49dbc6e27738d229393dfddc2d822c844adc1f95846476bad81f63edd35f086139f6d9de056d94ac
 EBUILD bm-1.32.ebuild 488 SHA256 010ee8cf72a30aaaca0027d017a6ec51bbf508d81b808aef845d090e9484ac0d SHA512 8eac43f55d69128b35abe25c8e5f7f47189760e7a02db438bc4dc524130d910861a7441af86f5d8333df49a8e2d0c91d7eb9deba6ef4762f12a2b4c34c94a759 WHIRLPOOL 03fb06276a50159adb9c8b99c766812e8b8db45f4dbc5b841cae82b1aa5435a18a7e612440048d5b8432e04a634f28a057f9b47948f1ddeb6b90bb6157e08b83
-MISC ChangeLog 769 SHA256 9ee8a3c8ddf32e074dd11e194be48dceb8cb94ff65ff9e38895d03878be6f4df SHA512 5a15285521062c1f1e22c7a456d48d889e7b02e7491d160aace534f24d9e6b3d2be0dce83087f4b1d0ea26e3a1246de0ecff3c899af321e7c828d77d754c7c61 WHIRLPOOL 568250d25f447f503ec389301a5d18a28c138b817a631a46c4384db614ce98c85776e2e931f7a0e2984758f614f3da0f14497870fecdb4c924d7a5eeb8a2a2e2
+EBUILD bm-1.32_p20140214.ebuild 621 SHA256 4f13311b303a538ffadaeb85ef8a522f2f8224a95539693f559122f61953a6d4 SHA512 cacda9e5cfc9c542b4d894392b3ef718634b922c2920c8b4405b72319f25e86a7fb13d56b5af7c1ca4e3dc8db4323c0e256a7fb6b18fb110da92051c0de6d306 WHIRLPOOL 516fabc87635953deadb6f35ae9de38234842117b58a95d848395d2954a3ce3bd99e75d82a952718709ca6b8996bd4c6f0b2c47bee2b7cf06f500dbeae243ee9
+MISC ChangeLog 927 SHA256 2253666d4c8d811ee682f7e88359a23a961784be08c62b8ea0b8c9190ee402b2 SHA512 db26ac4d1c63bd6b7eff5abc50ce6d611e717327a60d8ecb6582c558425fd6bba6a92e92661335f5c54bba1310185d12559da1e0f7008e04e87f9119da932577 WHIRLPOOL 06cb15268e91d58b7d44fb01fad1c1a6dbb2f84ada27655ec9bcf3c0e76216222f5e25eb284239c6ce64cce9223a01aef60de6ec5c676caa62066b1d9758bb27
 MISC metadata.xml 321 SHA256 8d87e58689076a8ec7d3dd68d77f13cf2bb8d675adcbe7387f227c5793e5fed6 SHA512 25993657493fe8b8166afa806e46e7cc803c132ef2a3bd126897264bb7294b31e86e9642ea89429b57ee49d39862cbb9808d7af0d48ec293bb8817a04fd4db76 WHIRLPOOL 69bc949c823312827e6010be8fbd5de0abc23cef7693c071db07c51d42cb001adc3d39730bd67dd9c44083cb883236c6c821a01f7f2ebe7848004494d53e817c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP9eqWAAoJEDxpGckxwJCBpcAP/Rvk7il5EwSafJWqSrBVZA4J
-gEDQieIWvbi0z4wNUr/8O77FoUGy7hEs6OxjUgWFhB3JROWGuPrIFijbfCZIBtbD
-o9scq6lkCJsawXSHdZmhPux1PGE1toH64/FAVx+EK+d3qSdzTpokDdjm7bpW70ou
-p0lAVtFQQJxXM0jQmaG3ivQq3Vycw69vVoMHmh2OIvMMZB/r35ttjlOFZjRLcy57
-iKtYjiWrPqOSksbcUhpDFHC191a4H7K9cKgGP0mq6Xh8GW/7LeECr5rwPkg6HOpc
-CWNfPqYSOsQl5Cv3luLhZn+u3ejGEwnTBUCUZAwOXdlBtUEOBGXC44QR9dOui55U
-deJkd7sArBV1xn6NROe9LnBgXxSZ7z4Tlg2f2LYql3srfgBSYzMhdivknFhcKFkC
-Gcy257HFT8mpof0eiCKuFLKcobmmdL43GBorTthEBLM3bNJ2z5DFV0gjSsFucpXK
-6sMc4zDCmH+ogyk8bP9qHvLToDNumI+opoG7jHw5JcVy3/AJO3RXvu0Ik5oZE7pi
-fQnbcg9kr4q1iHfiUbyTJ2nu6HEQByp/QNVyYuJcwBXZsvgl6ngcTTxnIcz/OTU0
-gFzJ5Tp0LpuV+cUyL7pj3D3szptv9UA0lJip4cM8P/8jTF5+xHD7eQqi8+uF/3Ls
-mDSTvt+N5PyOKbpkcIEX
-=ZEgm
+iQGcBAEBCAAGBQJTBbHEAAoJEJQzkH1pP7W45vcL/iv5AIqbiaKnWNuL+DlKJEzG
+bQ3KUPTY52Q0yrw5aJer3LXkzjqpyzOSmDVbMw2/jTke4Tx/GY1bCNKlPCkzLAea
+aTs2LP4nsJALwv3PIeR39RNiiHy0oM4S9NQBziLVsz2uPWMjvEzrpoIB5mdYVjb4
+22eMikzmtTfkdn/N6xaiAcxTJPXInrIzcuy5Nj+aCymEhxcarVICSpc4PmYC1c+0
+Bcw4po4sWSAmkHej2dQZzi4coEUpiFbaIo5HdTs2e9SMQAwBVrLYN31QKmaM0V7E
+b9vqfnpVRPLS+6DKbwgmTNDtA/Tm6O4LBVX4e9TAPKrVDZDpG/HTEIPEVdozdq4y
+9p1CBA159PQiNum+PRrGl6z8atgRKSM1iwQxzOuS3VY7L5YoBo97dRMwHkemVuVD
+xygvn5k187PtlkJWIZSSeiMFnIdWqy0VA0iIndGOo1N/5nVt3jbWhan74zH8uDAW
+e2hjvUKR0DYtNZbioFz/85ponpuQ5ldVuOUrf94P0Q==
+=akJI
 -----END PGP SIGNATURE-----
