@@ -1,6 +1,3 @@
-
-;;; bm site-lisp configuration
-
 (add-to-list 'load-path "@SITELISP@")
 (autoload 'bm-toggle "bm" "Toggle bookmark in current buffer." t)
 (autoload 'bm-next "bm" "Goto bookmark." t)
